# ustc-buy-burn

./: Cargo.toml  README.md
src/: burn.rs  contract.rs  governance.rs  lib.rs  msg.rs  staking.rs
tests/: integration_tests.rs
